<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createProfileMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primaryDark"
    tools:context=".activity.CreateProfileActivity">


    <ImageView
        android:id="@+id/cp_unwind_logo"
        android:layout_width="137dp"
        android:layout_height="124dp"
        android:contentDescription="@string/cp_unwind_app_logo"
        android:fadingEdge="none"
        android:src="@drawable/unwind_lys_logo_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_cp_user_default_image"
        android:layout_width="118dp"
        android:layout_height="117dp"
        android:clickable="true"
        android:contentDescription="@string/default_user_profile_image"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        tools:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/et_cp_first_name"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/primaryLight"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:lineSpacingExtra="10sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cp_user_default_image"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/et_cp_last_name"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_first_name"
        app:layout_constraintVertical_bias="0.014" />


    <Spinner
        android:id="@+id/et_cp_dob_spinner"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/primary"
        android:clickable="false"
        android:duplicateParentState="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/date_of_birth"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_last_name"
        app:layout_constraintVertical_bias="0.016" />

    <Spinner
        android:id="@+id/et_cp_user_gender"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/gender"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_dob_spinner"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/et_cp_bio"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:foregroundTint="@color/primaryLight"
        android:hint="@string/bio"
        android:inputType="text"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_user_gender"
        app:layout_constraintVertical_bias="0.035" />

    <Spinner
        android:id="@+id/sp_spinner_user_dob"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/country"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_bio"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/cp_btn_show_movies"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="#FFEBEE"
        android:clickable="true"
        android:focusable="true"
        android:lineSpacingExtra="10sp"
        android:text="@string/movies"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cp_btn_save_profile"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_bio"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/cp_btn_save_profile"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="10sp"
        android:onClick="@string/save_profile"
        android:text="@string/show_profile"
        android:textAlignment="center"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cp_bio"
        app:layout_constraintVertical_bias="0.81"
        tools:text="Save" />

    <ProgressBar
        android:id="@+id/progressbar_cp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/primaryLight"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:layout_editor_absoluteX="26dp" />


</androidx.constraintlayout.widget.ConstraintLayout>