<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfileMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".activity.ProfileActivity">

    <ImageView
        android:id="@+id/unwind_logo_1"
        android:layout_width="133dp"
        android:layout_height="114dp"
        android:contentDescription="@string/unwind_app_logo"
        android:fadingEdge="none"
        android:src="@drawable/unwind_lys_logo_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tv_sp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"

        app:layout_constraintBottom_toTopOf="@+id/tv_sp_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="30dp"
        android:layout_height="52dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="60dp"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/update_sp_iv_profile_image_icon"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_edit"
        android:tint="#FFFFFF"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />


    <ImageView
        android:id="@+id/tv_sp_profile_image"
        android:layout_width="177dp"
        android:layout_height="162dp"
        android:contentDescription="@string/profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        tools:srcCompat="@drawable/girl_with_coffee" />

    <TextView
        android:id="@+id/tv_sp_profile_title"
        android:layout_width="132dp"
        android:layout_height="67dp"
        android:background="@color/primaryDark"
        android:fadingEdge="none"
        android:fontFamily="@font/montserrat"
        android:foregroundGravity="center_horizontal"
        android:lineSpacingExtra="18sp"
        android:padding="10dp"
        android:text="@string/profile"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <TextView
        android:id="@+id/tv_sp_first_name"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_profile_title"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/tv_sp_last_name"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_sp_user_dob"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_last_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_sp_user_gender"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_user_dob"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_sp_bio"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/bio"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_user_gender"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tv_sp_country"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/country"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_bio"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sp_et_user_first_name"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:hint="@string/bio"
        android:inputType="textPersonName"
        android:labelFor="@id/tv_sp_first_name"
        android:padding="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toEndOf="@+id/tv_sp_first_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_profile_image"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/sp_et_user_lastname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoText="false"
        android:autofillHints=""
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:hint="@string/user_lastname"
        android:inputType="textPersonName"
        android:labelFor="@id/tv_sp_last_name"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/greenish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toEndOf="@+id/tv_sp_last_name"
        app:layout_constraintTop_toBottomOf="@+id/sp_et_user_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/sp_et_user_gender"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:labelFor="@id/tv_sp_user_dob"
        android:padding="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/tv_sp_user_dob"
        app:layout_constraintTop_toBottomOf="@+id/sp_et_user_lastname"
        app:layout_constraintVertical_bias="0.032" />

    <Spinner
        android:id="@+id/sp_spinner_user_dob"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/tv_sp_user_gender"
        app:layout_constraintTop_toBottomOf="@+id/sp_et_user_gender"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sp_et_user_bio"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="84dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:labelFor="@id/tv_sp_bio"
        android:padding="10dp"
        android:text="@string/bio"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/tv_sp_bio"
        app:layout_constraintTop_toBottomOf="@+id/sp_spinner_user_dob"
        app:layout_constraintVertical_bias="0.075" />

    <Spinner
        android:id="@+id/sp_et_user_country"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="84dp"
        android:background="@color/primary"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/tv_sp_country"
        app:layout_constraintTop_toBottomOf="@+id/sp_et_user_bio"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/sp_btn_edit_profile"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/nude"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"
        android:text="@string/update_profile"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_et_user_country"
        app:layout_constraintVertical_bias="0.207"
        app:rippleColor="@color/white" />

    <TextView
        android:id="@+id/sp_tv_logout_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="10sp"
        android:text="@string/logout"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_btn_edit_profile" />


    <Button
        android:id="@+id/sp_btn_dashboard"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/primaryLight"
        android:fontFamily="@font/montserrat"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/primaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sp_btn_edit_profile"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sp_country"
        app:layout_constraintVertical_bias="0.271" />

</androidx.constraintlayout.widget.ConstraintLayout>